# empty_cmake_project_stm32_g431

./: .cproject  .gitignore  .project  CMakeLists.txt  STM32G431RBTX_FLASH.ld  arm-none-eabi.cmake  build.bat  cubeide-gcc.cmake  Сравнение классов Output с CRTP и Dynamic polimor.txt
Core/Inc/: stm32g4xx_it.h
Core/Src/: main.cpp  stm32g4xx_it.c  system_stm32g4xx.c
Core/Startup/: startup_stm32g431rbtx.s
Drivers/CMSIS/Device/ST/STM32G4xx/Include/: stm32g4xx.h
